--- a/assembly.html
+++ b/assembly.html
@@ -869,7 +869,7 @@
                     width="232"
                     height="41"
                     src="./img/stopgame-logo.png"
-                    sizes=""
+                    sizes="290px"
                     alt="">
                 </a>
               </div>
@@ -988,7 +988,8 @@
                   <a href="/ua/intel-core-i5-12400f/" class="product__link product__image-wrapper">
                     <img sizes="(max-width: 548px) calc(100vw - 30px),
                              (max-width: 768px) calc(100vw - 164px),
-                             356px" data-source-format="png" srcset="./thumbs/s/320_0/uploads/images/items/629a6b2ddf02f204647507.webp 320w,
+                             356px" data-source-format="png"
+                      srcset="./thumbs/s/320_0/uploads/images/items/629a6b2ddf02f204647507.webp 320w,
                               ./thumbs/s/640_0/uploads/images/items/629a6b2ddf02f204647507.webp 640w,
                               ./thumbs/s/920_0/uploads/images/items/629a6b2ddf02f204647507.webp 920w,
                               ./thumbs/s/1220_0/uploads/images/items/629a6b2ddf02f204647507.webp 1220w,
@@ -1075,7 +1076,8 @@
                   <a href="/ua/gigabyte-radeon-rx-6500-xt-gaming-oc-4g/" class="product__link product__image-wrapper">
                     <img sizes="(max-width: 548px) calc(100vw - 30px),
                              (max-width: 768px) calc(100vw - 164px),
-                             356px" data-source-format="png" srcset="./thumbs/s/320_0/uploads/images/items/629a6b2ddf02f204647507.webp 320w,
+                             356px" data-source-format="png"
+                      srcset="./thumbs/s/320_0/uploads/images/items/629a6b2ddf02f204647507.webp 320w,
                               ./thumbs/s/640_0/uploads/images/items/629a6b2ddf02f204647507.webp 640w,
                               ./thumbs/s/920_0/uploads/images/items/629a6b2ddf02f204647507.webp 920w,
                               ./thumbs/s/1220_0/uploads/images/items/629a6b2ddf02f204647507.webp 1220w,
@@ -1704,7 +1706,7 @@
     </main>
     <footer class="footer">
       <div class="footer__item about-block">
-        <img src="/img/main-logo.svg" class="footer__logo">
+        <img src="./img/main-logo.svg" class="footer__logo">
         <div class="about-block__info">
           Каталог Salamander дает возможность вам легко собрать компьютер вашей мечты а затем купить все нужные
           комплектующие по лучшим ценам в надежных магазинах!
@@ -1793,14 +1795,14 @@
       </filter>
     </svg>
   </div>
-  <script src="/js/nouislider.min.js"></script>
+  <script src="./js/nouislider.min.js"></script>
 
-  <script src="/js/swiper-bundle.min.js"></script>
-  <script src="/js/main.js"></script>
-  <script src="/js/qrcode.min.js"></script>
+  <script src="./js/swiper-bundle.min.js"></script>
+  <script src="./js/main.js"></script>
+  <script src="./js/qrcode.min.js"></script>
 
 
-  <script src="/js/script.js"></script>
+  <script src="./js/script.js"></script>
 
   <!-- Yandex.Metrika counter -->
   <script type="text/javascript">
