--- a/catalog.html
+++ b/catalog.html
@@ -4,19 +4,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/css/swiper-bundle.min.css">
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="./css/swiper-bundle.min.css">
+  <link rel="stylesheet" href="./css/style.css">
   <title>Процессоры для ПК - выбор и сравнение цен в России</title>
   <meta name="description" content="Вибирайте процессоры для вашего ПК и покупайте по лучшей цене в России" />
 
   <link rel="alternate" hreflang="ru" href="https://salamander.one/ru/category/cpu/">
   <link rel="alternate" hreflang="ru-ua" href="https://salamander.one/ua/category/cpu/">
 
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  <link rel="manifest" href="/site.webmanifest">
-  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+  <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
+  <link rel="manifest" href="./site.webmanifest">
+  <link rel="mask-icon" href="./safari-pinned-tab.svg" color="#5bbad5">
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
 
@@ -913,8 +913,12 @@
                          (max-width: 953px) calc(50vw - 92px),
                          (max-width: 1112px) calc((100vw - 202px) / 3),
                          303px" data-source-format="png"
-                  srcset="/thumbs/s/320_0/uploads/images/items/62e6736ece4d6676077546.webp 320w, /thumbs/s/640_0/uploads/images/items/62e6736ece4d6676077546.webp 640w, /thumbs/s/920_0/uploads/images/items/62e6736ece4d6676077546.webp 920w, /thumbs/s/1220_0/uploads/images/items/62e6736ece4d6676077546.webp 1220w, /thumbs/s/1920_0/uploads/images/items/62e6736ece4d6676077546.webp 1920w"
-                  src="/thumbs/s/0_0/uploads/images/items/62e6736ece4d6676077546.webp" class="product__image  ">
+                  srcset="./thumbs/s/320_0/uploads/images/items/62e6736ece4d6676077546.webp 320w,
+                          ./thumbs/s/640_0/uploads/images/items/62e6736ece4d6676077546.webp 640w,
+                          ./thumbs/s/920_0/uploads/images/items/62e6736ece4d6676077546.webp 920w,
+                          ./thumbs/s/1220_0/uploads/images/items/62e6736ece4d6676077546.webp 1220w,
+                          ./thumbs/s/1920_0/uploads/images/items/62e6736ece4d6676077546.webp 1920w"
+                  src="./thumbs/s/0_0/uploads/images/items/62e6736ece4d6676077546.webp" class="product__image  ">
               </a>
               <div class="product__main-part">
                 <h2 class="product__title">
@@ -1001,8 +1005,12 @@
                          (max-width: 953px) calc(50vw - 92px),
                          (max-width: 1112px) calc((100vw - 202px) / 3),
                          303px" data-source-format="png"
-                  srcset="/thumbs/s/320_0/uploads/images/items/62c95bc6807c3766180073.webp 320w, /thumbs/s/640_0/uploads/images/items/62c95bc6807c3766180073.webp 640w, /thumbs/s/920_0/uploads/images/items/62c95bc6807c3766180073.webp 920w, /thumbs/s/1220_0/uploads/images/items/62c95bc6807c3766180073.webp 1220w, /thumbs/s/1920_0/uploads/images/items/62c95bc6807c3766180073.webp 1920w"
-                  src="/thumbs/s/0_0/uploads/images/items/62c95bc6807c3766180073.webp" class="product__image  ">
+                  srcset="./thumbs/s/320_0/uploads/images/items/62c95bc6807c3766180073.webp 320w,
+                          ./thumbs/s/640_0/uploads/images/items/62c95bc6807c3766180073.webp 640w,
+                          ./thumbs/s/920_0/uploads/images/items/62c95bc6807c3766180073.webp 920w,
+                          ./thumbs/s/1220_0/uploads/images/items/62c95bc6807c3766180073.webp 1220w,
+                          ./thumbs/s/1920_0/uploads/images/items/62c95bc6807c3766180073.webp 1920w"
+                  src="./thumbs/s/0_0/uploads/images/items/62c95bc6807c3766180073.webp" class="product__image  ">
               </a>
               <div class="product__main-part">
                 <h2 class="product__title">
@@ -1092,8 +1100,12 @@
                          (max-width: 953px) calc(50vw - 92px),
                          (max-width: 1112px) calc((100vw - 202px) / 3),
                          303px" data-source-format="png"
-                  srcset="/thumbs/s/320_0/uploads/images/items/62991f9ddc318763483794.webp 320w, /thumbs/s/640_0/uploads/images/items/62991f9ddc318763483794.webp 640w, /thumbs/s/920_0/uploads/images/items/62991f9ddc318763483794.webp 920w, /thumbs/s/1220_0/uploads/images/items/62991f9ddc318763483794.webp 1220w, /thumbs/s/1920_0/uploads/images/items/62991f9ddc318763483794.webp 1920w"
-                  src="/thumbs/s/0_0/uploads/images/items/62991f9ddc318763483794.webp" class="product__image  ">
+                  srcset="./thumbs/s/320_0/uploads/images/items/62991f9ddc318763483794.webp 320w,
+                          ./thumbs/s/640_0/uploads/images/items/62991f9ddc318763483794.webp 640w,
+                          ./thumbs/s/920_0/uploads/images/items/62991f9ddc318763483794.webp 920w,
+                          ./thumbs/s/1220_0/uploads/images/items/62991f9ddc318763483794.webp 1220w,
+                          ./thumbs/s/1920_0/uploads/images/items/62991f9ddc318763483794.webp 1920w"
+                  src="./thumbs/s/0_0/uploads/images/items/62991f9ddc318763483794.webp" class="product__image  ">
               </a>
               <div class="product__main-part">
                 <h2 class="product__title">
@@ -1183,8 +1195,12 @@
                          (max-width: 953px) calc(50vw - 92px),
                          (max-width: 1112px) calc((100vw - 202px) / 3),
                          303px" data-source-format="png"
-                  srcset="/thumbs/s/320_0/uploads/images/items/62e63b56b214d798741318.webp 320w, /thumbs/s/640_0/uploads/images/items/62e63b56b214d798741318.webp 640w, /thumbs/s/920_0/uploads/images/items/62e63b56b214d798741318.webp 920w, /thumbs/s/1220_0/uploads/images/items/62e63b56b214d798741318.webp 1220w, /thumbs/s/1920_0/uploads/images/items/62e63b56b214d798741318.webp 1920w"
-                  src="/thumbs/s/0_0/uploads/images/items/62e63b56b214d798741318.webp" class="product__image  ">
+                  srcset="./thumbs/s/320_0/uploads/images/items/62e63b56b214d798741318.webp 320w,
+                          ./thumbs/s/640_0/uploads/images/items/62e63b56b214d798741318.webp 640w,
+                          ./thumbs/s/920_0/uploads/images/items/62e63b56b214d798741318.webp 920w,
+                          ./thumbs/s/1220_0/uploads/images/items/62e63b56b214d798741318.webp 1220w,
+                          ./thumbs/s/1920_0/uploads/images/items/62e63b56b214d798741318.webp 1920w"
+                  src="./thumbs/s/0_0/uploads/images/items/62e63b56b214d798741318.webp" class="product__image  ">
               </a>
               <div class="product__main-part">
                 <h2 class="product__title">
@@ -1274,8 +1290,12 @@
                          (max-width: 953px) calc(50vw - 92px),
                          (max-width: 1112px) calc((100vw - 202px) / 3),
                          303px" data-source-format="png"
-                  srcset="/thumbs/s/320_0/uploads/images/items/62c95bcc70099114062751.webp 320w, /thumbs/s/640_0/uploads/images/items/62c95bcc70099114062751.webp 640w, /thumbs/s/920_0/uploads/images/items/62c95bcc70099114062751.webp 920w, /thumbs/s/1220_0/uploads/images/items/62c95bcc70099114062751.webp 1220w, /thumbs/s/1920_0/uploads/images/items/62c95bcc70099114062751.webp 1920w"
-                  src="/thumbs/s/0_0/uploads/images/items/62c95bcc70099114062751.webp" class="product__image  ">
+                  srcset="./thumbs/s/320_0/uploads/images/items/62c95bcc70099114062751.webp 320w,
+                          ./thumbs/s/640_0/uploads/images/items/62c95bcc70099114062751.webp 640w,
+                          ./thumbs/s/920_0/uploads/images/items/62c95bcc70099114062751.webp 920w,
+                          ./thumbs/s/1220_0/uploads/images/items/62c95bcc70099114062751.webp 1220w,
+                          ./thumbs/s/1920_0/uploads/images/items/62c95bcc70099114062751.webp 1920w"
+                  src="./thumbs/s/0_0/uploads/images/items/62c95bcc70099114062751.webp" class="product__image  ">
               </a>
               <div class="product__main-part">
                 <h2 class="product__title">
@@ -1365,8 +1385,12 @@
                          (max-width: 953px) calc(50vw - 92px),
                          (max-width: 1112px) calc((100vw - 202px) / 3),
                          303px" data-source-format="png"
-                  srcset="/thumbs/s/320_0/uploads/images/items/62e680e8993d7639410982.webp 320w, /thumbs/s/640_0/uploads/images/items/62e680e8993d7639410982.webp 640w, /thumbs/s/920_0/uploads/images/items/62e680e8993d7639410982.webp 920w, /thumbs/s/1220_0/uploads/images/items/62e680e8993d7639410982.webp 1220w, /thumbs/s/1920_0/uploads/images/items/62e680e8993d7639410982.webp 1920w"
-                  src="/thumbs/s/0_0/uploads/images/items/62e680e8993d7639410982.webp" class="product__image  ">
+                  srcset="./thumbs/s/320_0/uploads/images/items/62e680e8993d7639410982.webp 320w,
+                          ./thumbs/s/640_0/uploads/images/items/62e680e8993d7639410982.webp 640w,
+                          ./thumbs/s/920_0/uploads/images/items/62e680e8993d7639410982.webp 920w,
+                          ./thumbs/s/1220_0/uploads/images/items/62e680e8993d7639410982.webp 1220w,
+                          ./thumbs/s/1920_0/uploads/images/items/62e680e8993d7639410982.webp 1920w"
+                  src="./thumbs/s/0_0/uploads/images/items/62e680e8993d7639410982.webp" class="product__image  ">
               </a>
               <div class="product__main-part">
                 <h2 class="product__title">
@@ -1456,8 +1480,12 @@
                          (max-width: 953px) calc(50vw - 92px),
                          (max-width: 1112px) calc((100vw - 202px) / 3),
                          303px" data-source-format="png"
-                  srcset="/thumbs/s/320_0/uploads/images/items/62e6880abdf5c043922581.webp 320w, /thumbs/s/640_0/uploads/images/items/62e6880abdf5c043922581.webp 640w, /thumbs/s/920_0/uploads/images/items/62e6880abdf5c043922581.webp 920w, /thumbs/s/1220_0/uploads/images/items/62e6880abdf5c043922581.webp 1220w, /thumbs/s/1920_0/uploads/images/items/62e6880abdf5c043922581.webp 1920w"
-                  src="/thumbs/s/0_0/uploads/images/items/62e6880abdf5c043922581.webp" class="product__image  ">
+                  srcset="./thumbs/s/320_0/uploads/images/items/62e6880abdf5c043922581.webp 320w,
+                          ./thumbs/s/640_0/uploads/images/items/62e6880abdf5c043922581.webp 640w,
+                          ./thumbs/s/920_0/uploads/images/items/62e6880abdf5c043922581.webp 920w,
+                          ./thumbs/s/1220_0/uploads/images/items/62e6880abdf5c043922581.webp 1220w,
+                          ./thumbs/s/1920_0/uploads/images/items/62e6880abdf5c043922581.webp 1920w"
+                  src="./thumbs/s/0_0/uploads/images/items/62e6880abdf5c043922581.webp" class="product__image  ">
               </a>
               <div class="product__main-part">
                 <h2 class="product__title">
@@ -1547,8 +1575,12 @@
                          (max-width: 953px) calc(50vw - 92px),
                          (max-width: 1112px) calc((100vw - 202px) / 3),
                          303px" data-source-format="png"
-                  srcset="/thumbs/s/320_0/uploads/images/items/62e686ffa1a3d127190633.webp 320w, /thumbs/s/640_0/uploads/images/items/62e686ffa1a3d127190633.webp 640w, /thumbs/s/920_0/uploads/images/items/62e686ffa1a3d127190633.webp 920w, /thumbs/s/1220_0/uploads/images/items/62e686ffa1a3d127190633.webp 1220w, /thumbs/s/1920_0/uploads/images/items/62e686ffa1a3d127190633.webp 1920w"
-                  src="/thumbs/s/0_0/uploads/images/items/62e686ffa1a3d127190633.webp" class="product__image  ">
+                  srcset="./thumbs/s/320_0/uploads/images/items/62e686ffa1a3d127190633.webp 320w,
+                          ./thumbs/s/640_0/uploads/images/items/62e686ffa1a3d127190633.webp 640w,
+                          ./thumbs/s/920_0/uploads/images/items/62e686ffa1a3d127190633.webp 920w,
+                          ./thumbs/s/1220_0/uploads/images/items/62e686ffa1a3d127190633.webp 1220w,
+                          ./thumbs/s/1920_0/uploads/images/items/62e686ffa1a3d127190633.webp 1920w"
+                  src="./thumbs/s/0_0/uploads/images/items/62e686ffa1a3d127190633.webp" class="product__image  ">
               </a>
               <div class="product__main-part">
                 <h2 class="product__title">
@@ -1638,8 +1670,12 @@
                          (max-width: 953px) calc(50vw - 92px),
                          (max-width: 1112px) calc((100vw - 202px) / 3),
                          303px" data-source-format="png"
-                  srcset="/thumbs/s/320_0/uploads/images/items/62a2f04d82a0f818316631.webp 320w, /thumbs/s/640_0/uploads/images/items/62a2f04d82a0f818316631.webp 640w, /thumbs/s/920_0/uploads/images/items/62a2f04d82a0f818316631.webp 920w, /thumbs/s/1220_0/uploads/images/items/62a2f04d82a0f818316631.webp 1220w, /thumbs/s/1920_0/uploads/images/items/62a2f04d82a0f818316631.webp 1920w"
-                  src="/thumbs/s/0_0/uploads/images/items/62a2f04d82a0f818316631.webp" class="product__image  ">
+                  srcset="./thumbs/s/320_0/uploads/images/items/62a2f04d82a0f818316631.webp 320w,
+                          ./thumbs/s/640_0/uploads/images/items/62a2f04d82a0f818316631.webp 640w,
+                          ./thumbs/s/920_0/uploads/images/items/62a2f04d82a0f818316631.webp 920w,
+                          ./thumbs/s/1220_0/uploads/images/items/62a2f04d82a0f818316631.webp 1220w,
+                          ./thumbs/s/1920_0/uploads/images/items/62a2f04d82a0f818316631.webp 1920w"
+                  src="./thumbs/s/0_0/uploads/images/items/62a2f04d82a0f818316631.webp" class="product__image  ">
               </a>
               <div class="product__main-part">
                 <h2 class="product__title">
@@ -1729,8 +1765,12 @@
                          (max-width: 953px) calc(50vw - 92px),
                          (max-width: 1112px) calc((100vw - 202px) / 3),
                          303px" data-source-format="png"
-                  srcset="/thumbs/s/320_0/uploads/images/items/6298f85400622498537025.webp 320w, /thumbs/s/640_0/uploads/images/items/6298f85400622498537025.webp 640w, /thumbs/s/920_0/uploads/images/items/6298f85400622498537025.webp 920w, /thumbs/s/1220_0/uploads/images/items/6298f85400622498537025.webp 1220w, /thumbs/s/1920_0/uploads/images/items/6298f85400622498537025.webp 1920w"
-                  src="/thumbs/s/0_0/uploads/images/items/6298f85400622498537025.webp" class="product__image  ">
+                  srcset="./thumbs/s/320_0/uploads/images/items/6298f85400622498537025.webp 320w,
+                          ./thumbs/s/640_0/uploads/images/items/6298f85400622498537025.webp 640w,
+                          ./thumbs/s/920_0/uploads/images/items/6298f85400622498537025.webp 920w,
+                          ./thumbs/s/1220_0/uploads/images/items/6298f85400622498537025.webp 1220w,
+                          ./thumbs/s/1920_0/uploads/images/items/6298f85400622498537025.webp 1920w"
+                  src="./thumbs/s/0_0/uploads/images/items/6298f85400622498537025.webp" class="product__image  ">
               </a>
               <div class="product__main-part">
                 <h2 class="product__title">
@@ -1817,8 +1857,12 @@
                          (max-width: 953px) calc(50vw - 92px),
                          (max-width: 1112px) calc((100vw - 202px) / 3),
                          303px" data-source-format="png"
-                  srcset="/thumbs/s/320_0/uploads/images/items/62c959c714fe6245541571.webp 320w, /thumbs/s/640_0/uploads/images/items/62c959c714fe6245541571.webp 640w, /thumbs/s/920_0/uploads/images/items/62c959c714fe6245541571.webp 920w, /thumbs/s/1220_0/uploads/images/items/62c959c714fe6245541571.webp 1220w, /thumbs/s/1920_0/uploads/images/items/62c959c714fe6245541571.webp 1920w"
-                  src="/thumbs/s/0_0/uploads/images/items/62c959c714fe6245541571.webp" class="product__image  ">
+                  srcset="./thumbs/s/320_0/uploads/images/items/62c959c714fe6245541571.webp 320w,
+                          ./thumbs/s/640_0/uploads/images/items/62c959c714fe6245541571.webp 640w,
+                          ./thumbs/s/920_0/uploads/images/items/62c959c714fe6245541571.webp 920w,
+                          ./thumbs/s/1220_0/uploads/images/items/62c959c714fe6245541571.webp 1220w,
+                          ./thumbs/s/1920_0/uploads/images/items/62c959c714fe6245541571.webp 1920w"
+                  src="./thumbs/s/0_0/uploads/images/items/62c959c714fe6245541571.webp" class="product__image  ">
               </a>
               <div class="product__main-part">
                 <h2 class="product__title">
@@ -1908,8 +1952,12 @@
                          (max-width: 953px) calc(50vw - 92px),
                          (max-width: 1112px) calc((100vw - 202px) / 3),
                          303px" data-source-format="png"
-                  srcset="/thumbs/s/320_0/uploads/images/items/62e6870544bed959528300.webp 320w, /thumbs/s/640_0/uploads/images/items/62e6870544bed959528300.webp 640w, /thumbs/s/920_0/uploads/images/items/62e6870544bed959528300.webp 920w, /thumbs/s/1220_0/uploads/images/items/62e6870544bed959528300.webp 1220w, /thumbs/s/1920_0/uploads/images/items/62e6870544bed959528300.webp 1920w"
-                  src="/thumbs/s/0_0/uploads/images/items/62e6870544bed959528300.webp" class="product__image  ">
+                  srcset="./thumbs/s/320_0/uploads/images/items/62e6870544bed959528300.webp 320w,
+                          ./thumbs/s/640_0/uploads/images/items/62e6870544bed959528300.webp 640w,
+                          ./thumbs/s/920_0/uploads/images/items/62e6870544bed959528300.webp 920w,
+                          ./thumbs/s/1220_0/uploads/images/items/62e6870544bed959528300.webp 1220w,
+                          ./thumbs/s/1920_0/uploads/images/items/62e6870544bed959528300.webp 1920w"
+                  src="./thumbs/s/0_0/uploads/images/items/62e6870544bed959528300.webp" class="product__image  ">
               </a>
               <div class="product__main-part">
                 <h2 class="product__title">
@@ -2015,7 +2063,7 @@
     </main>
     <footer class="footer">
       <div class="footer__item about-block">
-        <img src="/img/main-logo.svg" class="footer__logo">
+        <img src="./img/main-logo.svg" class="footer__logo">
         <div class="about-block__info">
           Каталог Salamander дает возможность вам легко собрать компьютер вашей мечты а затем купить все нужные
           комплектующие по лучшим ценам в надежных магазинах!
@@ -2104,14 +2152,14 @@
       </filter>
     </svg>
   </div>
-  <script src="/js/nouislider.min.js"></script>
+  <script src="./js/nouislider.min.js"></script>
 
-  <script src="/js/swiper-bundle.min.js"></script>
-  <script src="/js/main.js"></script>
-  <script src="/js/qrcode.min.js"></script>
+  <script src="./js/swiper-bundle.min.js"></script>
+  <script src="./js/main.js"></script>
+  <script src="./js/qrcode.min.js"></script>
 
 
-  <script src="/js/script.js"></script>
+  <script src="./js/script.js"></script>
 
   <!-- Yandex.Metrika counter -->
   <script type="text/javascript">
