--- a/item.html
+++ b/item.html
@@ -766,7 +766,11 @@
                              (max-width: 768px) 552px,
                              (max-width: 1094px) 42vw,
                              475px" data-source-format="png"
-                      srcset="./thumbs/s/320_0/uploads/images/items/62e6736ece4d6676077546.webp 320w, /thumbs/s/640_0/uploads/images/items/62e6736ece4d6676077546.webp 640w, /thumbs/s/920_0/uploads/images/items/62e6736ece4d6676077546.webp 920w, /thumbs/s/1220_0/uploads/images/items/62e6736ece4d6676077546.webp 1220w, /thumbs/s/1920_0/uploads/images/items/62e6736ece4d6676077546.webp 1920w"
+                      srcset="./thumbs/s/320_0/uploads/images/items/62e6736ece4d6676077546.webp 320w,
+                              ./thumbs/s/640_0/uploads/images/items/62e6736ece4d6676077546.webp 640w,
+                              ./thumbs/s/920_0/uploads/images/items/62e6736ece4d6676077546.webp 920w,
+                              ./thumbs/s/1220_0/uploads/images/items/62e6736ece4d6676077546.webp 1220w,
+                              ./thumbs/s/1920_0/uploads/images/items/62e6736ece4d6676077546.webp 1920w"
                       src="./thumbs/s/0_0/uploads/images/items/62e6736ece4d6676077546.webp" alt="AMD Ryzen 5 3600"
                       data-modal-slide="1"
                       src="https://panel.salamander.one/uploads/images/items/62e6736ece4d6676077546.png"
@@ -780,7 +784,11 @@
                              (max-width: 768px) 552px,
                              (max-width: 1094px) 42vw,
                              475px" alt="img1" data-source-format="png"
-                        srcset="./thumbs/s/320_0/uploads/images/items/62e6736ece4d6676077546.webp 320w, /thumbs/s/640_0/uploads/images/items/62e6736ece4d6676077546.webp 640w, /thumbs/s/920_0/uploads/images/items/62e6736ece4d6676077546.webp 920w, /thumbs/s/1220_0/uploads/images/items/62e6736ece4d6676077546.webp 1220w, /thumbs/s/1920_0/uploads/images/items/62e6736ece4d6676077546.webp 1920w"
+                        srcset="./thumbs/s/320_0/uploads/images/items/62e6736ece4d6676077546.webp 320w,
+                                ./thumbs/s/640_0/uploads/images/items/62e6736ece4d6676077546.webp 640w,
+                                ./thumbs/s/920_0/uploads/images/items/62e6736ece4d6676077546.webp 920w,
+                                ./thumbs/s/1220_0/uploads/images/items/62e6736ece4d6676077546.webp 1220w,
+                                ./thumbs/s/1920_0/uploads/images/items/62e6736ece4d6676077546.webp 1920w"
                         src="./thumbs/s/0_0/uploads/images/items/62e6736ece4d6676077546.webp"
                         class="swiper-slide product-slider__item" />
 
