--- a/catalog.html
+++ b/catalog.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/swiper-bundle.min.css">
+  <link rel="stylesheet" href="./css/simplebar.min.css">
   <link rel="stylesheet" href="./css/style.css">
   <title>Процессоры для ПК - выбор и сравнение цен в России</title>
   <meta name="description" content="Вибирайте процессоры для вашего ПК и покупайте по лучшей цене в России" />
@@ -145,7 +146,7 @@
           <span>Фильтр</span>
           <span class="sidebar__close-btn">&#10006;</span>
         </p>
-        <ul class="sidebar-list">
+        <ul class="sidebar-list vertical-scroll">
           <li class="sidebar-list__item filter">
             <ul class="filter__items-list">
               <li class="filter__item">
@@ -2155,6 +2156,7 @@
   <script src="./js/nouislider.min.js"></script>
 
   <script src="./js/swiper-bundle.min.js"></script>
+  <script src="./js/simplebar.min.js"></script>
   <script src="./js/main.js"></script>
   <script src="./js/qrcode.min.js"></script>
 
